Bug 278383 - kaddressbook qrcode work only if the contact didn't have a photography
Summary: kaddressbook qrcode work only if the contact didn't have a photography
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-24 11:07 UTC by Bruno Friedmann
Modified: 2011-08-09 13:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Contact with only text show a qrcode (87.61 KB, image/png)
2011-07-24 11:07 UTC, Bruno Friedmann
Details
Contact with a picture profil break qrcode (128.22 KB, image/png)
2011-07-24 11:08 UTC, Bruno Friedmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Friedmann 2011-07-24 11:07:37 UTC
Created attachment 62135 [details]
Contact with only text show a qrcode

Version:           unspecified (using Devel) 
OS:                Linux

With the new kaddressbook & qrcode 
qrcode work only if the contact didn't have a picture in it

Reproducible: Always

Steps to Reproduce:
create a adressbook collection
add a full contact without picture : qrcode is show
add a full contact + picture : qrcode is broken

Actual Results:  
qrcode is broken none shown

Expected Results:  
qrcode is shown

Would be a super feature to be all to copy and paste or save as those qrcode to picture
Comment 1 Bruno Friedmann 2011-07-24 11:08:14 UTC
Created attachment 62136 [details]
Contact with a picture profil break qrcode
Comment 2 Christophe Marin 2011-07-24 12:21:25 UTC
Confirmed w/ master
Comment 3 Christophe Marin 2011-08-09 11:34:55 UTC
Git commit 2c3a0156a105f84391612da4b870b71b039e58f9 by Christophe Giboudeaux, on behalf of Sune Vuorela.
Committed on 09/08/2011 at 09:59.
Pushed by cgiboudeaux into branch '4.7'.

Unset copy the addressee and unset photo and logo before doing mobile barcodes.

the photo content basically gives too much data for the barcodes to be done properly.

BUG: 278383
(cherry picked from commit ae375c0b224f35f22934350c213b0ca33261f1d3)

M  +6    -1    akonadi/contact/contactviewer.cpp

http://commits.kde.org/kdepimlibs/2c3a0156a105f84391612da4b870b71b039e58f9
Comment 4 Bruno Friedmann 2011-08-09 13:23:19 UTC
I hope you also excluded all kind of blob we can push like digital certificates and ssh pubkey etc.