Unset copy the addressee and unset photo and logo before doing mobile barcodes.

the photo content basically gives too much data for the barcodes to be done properly.

BUG: 278383