contact/contactviewer.cpp
@@ -93,8 +93,12 @@ class ContactViewer::Private
                                          KIcon( QLatin1String( "document-open-remote" ) ).pixmap( QSize( 16, 16 ) ) );
 
 #ifdef HAVE_PRISON
+      {
       KABC::VCardConverter converter;
-      const QString data = QString::fromUtf8( converter.createVCard( mCurrentContact ) );
+      KABC::Addressee addr(mCurrentContact);
+      addr.setPhoto(KABC::Picture());
+      addr.setLogo(KABC::Picture());
+      const QString data = QString::fromUtf8( converter.createVCard( addr ) );
       mQRCode->setData( data );
       mDataMatrix->setData( data );
       mBrowser->document()->addResource( QTextDocument::ImageResource,
@@ -103,6 +107,7 @@ class ContactViewer::Private
       mBrowser->document()->addResource( QTextDocument::ImageResource,
                                          QUrl( QLatin1String( "datamatrix" ) ),
                                          mDataMatrix->toImage( QSizeF(50,50) ) );
+      }
 #endif // HAVE_PRISON
 
       // merge local and global custom field descriptions
